fix styling alignment after implementing router

--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -7,6 +7,7 @@
   margin: 10% 4% 0 4%;
   color: $light-green;
   width: 15%;
+  text-decoration: none;
   cursor: pointer;
 }
 
@@ -15,10 +16,6 @@
   margin-left: 0;
   text-align: center;
 }
-
-// .movie-card h2:hover, .movie-card p:hover {
-//   color: $pickle;
-// }
 
 .movie-img {
   width: 100%;
