--- a/src/Movies/Movies.scss
+++ b/src/Movies/Movies.scss
@@ -5,6 +5,5 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: $forest;
 }
   
