--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -12,12 +12,10 @@ h1 {
 .nav-bar {
   background-color: $pickle;
   display: flex;
-  justify-content: space-around;
 }
 
 .home-btn {
   font-size: 1.25em;
-  margin: 10%;
   height: 60px;
   width: 125px;
   background-color: $light-green;
@@ -37,7 +35,7 @@ h1 {
 .nav-title {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 70%;
 }
 
 .nav-title h3, h1 {
@@ -45,15 +43,12 @@ h1 {
 }
 
 .btn-container {
-  width: 50%;
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-}
-
-@media only screen and (max-width: 900px){
-  .nav-bar {
-  }
+  align-items: flex-end;
+  margin: 3%;
 }
 
 @media only screen and (max-width: 900px) {
